| Bug #13152 | bit fields and fields that follow become corrupted when dumped from NDB tables | ||
|---|---|---|---|
| Submitted: | 13 Sep 2005 22:35 | Modified: | 23 Sep 2005 19:19 |
| Reporter: | Jonathan Miller | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 5.0 | OS: | Linux (Linux) |
| Assigned to: | Tomas Ulin | Target Version: | |
[13 Sep 2005 22:35]
Jonathan Miller
[14 Sep 2005 11:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/29814
[14 Sep 2005 13:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/29824
[14 Sep 2005 16:34]
Tomas Ulin
fixed in 5.0.13
[15 Sep 2005 20:20]
Paul DuBois
Noted in 5.0.13 changelog.
[19 Sep 2005 14:04]
Jonathan Miller
Test rpl_bit.test still fails using RBR in wl1012
[19 Sep 2005 14:58]
Jonathan Miller
Changed it back since test is based off myisam
[19 Sep 2005 15:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30046
[19 Sep 2005 15:53]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30048
[20 Sep 2005 6:40]
Tomas Ulin
last bugfix had an error, so it was not fixed in 5.0.13 now fixed in 5.0.14
[23 Sep 2005 19:19]
Paul DuBois
I've moved the changelog entry from 5.0.13 to 5.0.14.
