  Corrected last fix for   Bug #13152 bit fields and fields that follow become corrupted when dumped from NDB tables